--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -349,7 +349,7 @@ flex-flow: column wrap;
 .flex.space-between {
 -webkit-box-pack: justify;
 -ms-flex-pack: justify;
-justify-content: space-between;
+/* justify-content: space-between; */
 }
 
 .flex.space-center {
@@ -5685,7 +5685,7 @@ display: flex;
 flex-direction: row;
 }
 .video-wrapper .video-box .link li:nth-child(2) { 
-  margin-left: 430px;
+  margin-left: 410px;
   margin-right: 20px;
   }
   .video-wrapper .video-box .link li:nth-child(3) { 
