--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -14,9 +14,7 @@
   align-items: center;
 }
 
-.dropbtn a:hover {
-  background: "red"
-}
+
 
 .dropdown {
   position: relative;
@@ -1953,4 +1951,16 @@ ul.connect-link li {
 .video-box ul.flex.space-between.link .download-btn {
   display: flex;
   gap: 10px;
+}
+.blursImgs{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(1px);
+  background-color: rgba(19,31,44, 0.47);
+}
+.rightSection .guru-gold-silver .silver-user li{
+  position: relative;
 }
