work on mob responsive done

--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -1173,6 +1173,10 @@ header .userIcon img {
   display: flex;
   flex-direction: column;
 }
+.author-tag.flex {
+  position: absolute;
+  bottom: 15px;
+  width: 100%;}
 .video-slider .layer .author-tag {
   margin-top: auto;
 }
