--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -2,16 +2,17 @@
 /* DropdownCSS By Akshay */
 
 .dropbtn {
-  background: linear-gradient(to bottom, #b03fcc, #683fe4);
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  width: -webkit-fill-available;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	background: linear-gradient(to bottom, #b03fcc, #683fe4);
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+	width: -webkit-fill-available;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	min-width: 160px;
 }
 
 
@@ -448,6 +449,9 @@ p.d_blck {
 }
 .rightSection .keeps-container .blog-details li {
   color: #cfd6db;
+}
+.rightSection .keeps-container .blog-details .comment-box ul li a span div span {
+	font-weight: 700;
 }
 .review div {
   display: flex;
@@ -1120,9 +1124,11 @@ header .userIcon img {
     margin: auto 0 12px;
   }
   .mobileVideoSection .layer .price {
-    width: 65px;
+    width: 95px;
     padding: 0 10px;
-  }
+    margin-top: -3px;
+    height: 40px;
+}
   .edit-profile {
     width: 100%;
   }
@@ -1133,6 +1139,17 @@ header .userIcon img {
   .mobileVideoSection .wrapper {
     margin-bottom: 0;
   }
+  .mob_profile .mob_profile_inner {
+    padding-top: 80px;
+}
+.video-box ul.flex.space-between.link .download-btn {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+.connect-link.flex.align-center > div {
+  width: 100% !important;
+}
 }
 .article-slider .wrap a,
 .video-slider .wrap a {
@@ -1224,6 +1241,11 @@ header .userIcon img {
   .interestSection .cancelBtn a i {
     font-size: 18px;
   }
+  .home-category li, .home-category li:last-of-type {
+    width: 100%;
+    margin-right: 15px;
+    margin-bottom: 13px;
+}
 }
 .blogDetails .blogger-profile figure {
   width: 46px;
@@ -1248,10 +1270,10 @@ header .userIcon img {
 .blog-slider .wrap .layer button {
   margin-top: auto;
 }
-.rightSection .keeps-container .blog-details .blog-txt p a {
-  color: #be41c0;
-  transition: all 0.25s ease;
-}
+.rightSection .keeps-container .blog-details .blog-txt p a, .rightSection .keeps-container .blog-details .blog-txt ol li a {
+	color: #be41c0;
+	transition: all 0.25s ease;
+} 
 .rightSection .keeps-container .blog-details .blog-txt p a:hover {
   text-decoration: underline;
 }
@@ -1264,7 +1286,8 @@ header .userIcon img {
   white-space: break-spaces;
 }
 .rightSection .keeps-container .blog-details .blog-txt {
-  width: 100%;
+	width: 100%;
+	cursor: default;
 }
 .profileImgChange .imageChange .cameraImg {
   opacity: 0;
@@ -1652,6 +1675,8 @@ section.mainWrapper
   font-size: 14px;
   line-height: 1.45em;
   font-weight: 400;
+  text-align: center;
+  padding-top: 10px;
 }
 .interestSection.second .followexperts li .btnWrap {
   background: linear-gradient(91.54deg, #6591ff 0.79%, #ff2dcd 116.36%);
@@ -1864,11 +1889,15 @@ section.mainWrapper
   .content
   p
   img {
-  margin-right: 5px;
+  margin-right: 10px;
+}
+rightSection .guru-gold-silver .center-box .topThreeBoxWrap ul li .content {
+	width: 100px;
 }
 .rightSection .guru-gold-silver .center-box .topThreeBoxWrap ul li .content h6 {
-  margin-top: 2px;
-}
+	margin-top: 2px;
+	word-break: break-word;
+} 
 .rightSection .guru-gold-silver .list-container .button span {
   color: white;
 }
@@ -1898,7 +1927,8 @@ section.mainWrapper
 .rightSection .guru-gold-silver .silver-user ul li figure img {
   width: 100%;
   height: 100%;
-}
+  background-size: cover;
+} 
 .rightSection ul.connect-link figure img {
   width: 30px !important;
   height: 30px !important;
