--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -13,6 +13,7 @@
 	justify-content: space-between;
 	align-items: center;
 	min-width: 160px;
+  border-radius: 15px;
 }
 
 
@@ -20,7 +21,7 @@
 .dropdown {
   position: relative;
   display: inline-block;
-  width: 160px;
+  width: 160px; 
 }
 
 .dropdown-content {
@@ -30,6 +31,7 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  border-radius: 15px;
   /* width: 20%; */
 }
 
@@ -38,12 +40,28 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  font-size:16px;
+  
 }
-
+.dropdown-content a:hover:first-child {
+  background: linear-gradient(to bottom, #b03fcc, #683fe4);
+  color: rgb(7, 7, 7);
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 15px 15px 0 0 ;
+}
 .dropdown-content a:hover {
   background: linear-gradient(to bottom, #b03fcc, #683fe4);
-  color: white;
+  color: rgb(7, 7, 7);
   font-size: 16px;
+  cursor: pointer;
+}
+.dropdown-content a:hover:last-child {
+  background: linear-gradient(to bottom, #b03fcc, #683fe4);
+  color: rgb(7, 7, 7);
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 0 0 15px 15px;
 }
 
 .dropdown:hover .dropdown-content {
@@ -1849,6 +1867,13 @@ section.mainWrapper
 }
 .rightSection .guru-gold-silver .silver-coin-box .userPro figure {
   overflow: hidden;
+}
+.rightSection .guru-gold-silver .center-box .topThreeBoxWrap ul li .content h6 {
+	margin-top: 2px;
+	word-break: break-word;
+}
+.rightSection .guru-gold-silver .center-box .topThreeBoxWrap ul li .content {
+	width: 100px;
 }
 .rightSection .guru-gold-silver .silver-coin-box .userPro .profileImageTag {
   position: absolute;
