--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -2664,8 +2664,16 @@ border-radius: 12px;
 width: 100%;
 height: 100%;
 }
+.mobileVideoSection .videoBoxes .youtube-icon img {
+  width: 25px;
+  height: 25px;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+  }
 
-.mobileVideoSection .videoBoxes figure img {
+.mobileVideoSection .videoBoxes .youtube-icon figure img {
 width: 100%;
 height: 100%;
 object-fit: cover;
