--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -41,10 +41,10 @@
 .youtube-icon img {
   width: 70px;
   height: 70px;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @keyframes mercuryTypingAnimation {
@@ -65,24 +65,24 @@ transform: translate(-50%,-50%);
 /* DropdownCSS By Akshay */
 
 .dropbtn {
-	background: linear-gradient(to bottom, #b03fcc, #683fe4);
-	color: white;
-	padding: 16px;
-	font-size: 16px;
-	border: none;
-	cursor: pointer;
-	width: -webkit-fill-available;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	min-width: 160px;
+  background: linear-gradient(to bottom, #b03fcc, #683fe4);
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: -webkit-fill-available;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 160px;
   border-radius: 15px;
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
-  width: 160px; 
+  width: 160px;
 }
 
 .dropdown-content {
@@ -101,29 +101,27 @@ transform: translate(-50%,-50%);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  font-size:16px;
-  
+  font-size: 16px;
 }
-.dropdown-content a:hover:first-child {
-  background: linear-gradient(to bottom, #b03fcc, #683fe4);
-  color: rgb(7, 7, 7);
+/* .dropdown-content a:hover:first-child {
+  background: #be41c0;
   font-size: 16px;
   cursor: pointer;
-  border-radius: 15px 15px 0 0 ;
-}
+  border-radius: 15px 15px 0 0;
+} */
 .dropdown-content a:hover {
-  background: linear-gradient(to bottom, #b03fcc, #683fe4);
+  background: #be41c0;
   color: rgb(7, 7, 7);
   font-size: 16px;
   cursor: pointer;
 }
-.dropdown-content a:hover:last-child {
+/* .dropdown-content a:hover:last-child {
   background: linear-gradient(to bottom, #b03fcc, #683fe4);
   color: rgb(7, 7, 7);
   font-size: 16px;
   cursor: pointer;
   border-radius: 0 0 15px 15px;
-}
+} */
 
 .dropdown:hover .dropdown-content {
   display: block;
@@ -1942,11 +1940,11 @@ section.mainWrapper
   overflow: hidden;
 }
 .rightSection .guru-gold-silver .center-box .topThreeBoxWrap ul li .content h6 {
-	margin-top: 2px;
-	word-break: break-word;
+  margin-top: 2px;
+  word-break: break-word;
 }
 .rightSection .guru-gold-silver .center-box .topThreeBoxWrap ul li .content {
-	width: 100px;
+  width: 100px;
 }
 .rightSection .guru-gold-silver .silver-coin-box .userPro .profileImageTag {
   position: absolute;
@@ -2101,4 +2099,12 @@ ul.connect-link li {
   position: absolute;
   bottom: 10px;
   right: 0;
+}
+.video-wrapper .video-box .bt-like a:hover .borderImage {
+  display: none;
+  transition: all 0.1s ease;
+}
+
+.video-wrapper .video-box .bt-like a:hover .fillImage {
+  display: block !important;
 }
