--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -7523,6 +7523,7 @@ font-weight: 400;
 line-height: 1.25em;
 font-family: PlusJakartaSansRegular;
 color: #fff;
+margin-left: 5px;
 }
 
 .rightSection .guru-gold-silver .center-box .topThreeBoxWrap ul li .content h6 {
