--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -114,6 +114,7 @@
   color: rgb(7, 7, 7);
   font-size: 16px;
   cursor: pointer;
+  border-radius: 10px;
 }
 .dropdown-content a:hover:last-child {
   background: linear-gradient(to bottom, #b03fcc, #683fe4);
@@ -266,6 +267,14 @@ input[type="file"]::file-selector-button {
     #24323b
   );
   padding: 25px 10px;
+  min-height: 100vh;
+}
+.mobile_wrapper {
+  background-color: #131f2c;
+  min-height: 100vh;
+}
+.full-width .interest-guru .content {
+  width: calc(100% - 25px) !important;
 }
 .loginOption figure.headerLogo,
 .createAccount figure.headerLogo {
@@ -620,6 +629,7 @@ li.comment-btn a {
 li.comment-btn {
   display: flex;
   gap: 10px;
+  margin-top: 10px;
 }
 li.comment-btn img.fillImage {
   display: none;
@@ -1358,6 +1368,13 @@ header .userIcon img {
     margin-right: 15px;
     margin-bottom: 13px;
   }
+  .rightSection .keeps-container .blog-details {
+    max-width: 100%;
+    padding: 0 0px 0 0;
+}
+}
+.rightSection .guru-gold-silver .access-rewards .reward-container h6 {
+  width: 160px;
 }
 .blogDetails .blogger-profile figure {
   width: 46px;
@@ -2121,7 +2138,7 @@ ul.connect-link li {
 }
 .blurImgIcons {
   position: absolute;
-  bottom: 10px;
+  bottom: 35px;
   right: 0;
 }
 .video-wrapper .video-box .bt-like a:hover .borderImage {
