--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -2328,11 +2328,12 @@ select#countryCode {
   width: 100%;
   padding: 14px 10px;
   border-radius: 10px;
-  background-color: #25313f;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   font-size: 15px;
   border: 2px solid rgba(229, 241, 249, 0.3607843137);
   outline: none;
+  font-size: 14px;
 }
 form.help-section.payment-wrapper > h2 {
   margin-bottom: 25px;
