--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -6331,9 +6331,10 @@ right: 0;
 }
 
 .subscriptionPlan .change-plan .plans-wrapper {
-max-width: 600px;
+min-width: 600px;
 width: 100%;
 margin: 0 auto;
+justify-content: space-evenly;
 }
 
 .subscriptionPlan .change-plan .plans-wrapper .monthly-plans {
@@ -6342,6 +6343,7 @@ background: rgba(198, 208, 225, 0.1019607843);
 border-radius: 16px;
 padding: 20px;
 margin-right: 24px;
+margin-top: 24px;
 box-shadow: 0 4px 14px 0 rgba(60, 71, 101, 0.1294117647);
 }
 
