--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -13,6 +13,10 @@
   border: 1px solid transparent
 }
 
+.error-active {
+  border: 2px solid red !important;
+}
+
 @media (max-width:576px) {
   .kep-login-facebook.metro {
     padding: 15px 178px;
@@ -6262,20 +6266,20 @@ h3 {
 }
 
 .subscriptionPlan .change-plan .plans-wrapper {
-min-width: 600px;
-width: 100%;
-margin: 0 auto;
-justify-content: space-evenly;
+  min-width: 600px;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: space-evenly;
 }
 
 .subscriptionPlan .change-plan .plans-wrapper .monthly-plans {
-width: 280px;
-background: rgba(198, 208, 225, 0.1019607843);
-border-radius: 16px;
-padding: 20px;
-margin-right: 24px;
-margin-top: 24px;
-box-shadow: 0 4px 14px 0 rgba(60, 71, 101, 0.1294117647);
+  width: 280px;
+  background: rgba(198, 208, 225, 0.1019607843);
+  border-radius: 16px;
+  padding: 20px;
+  margin-right: 24px;
+  margin-top: 24px;
+  box-shadow: 0 4px 14px 0 rgba(60, 71, 101, 0.1294117647);
 
 }
 
