--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -1347,7 +1347,9 @@ header .userIcon img {
   .fixedBtn {
     width: 50px;
     height: 50px;
-  }
+    right: 20px;
+    bottom: 20px;
+}
   .fixedBtn figure img {
     width: 60%;
   }
@@ -1392,7 +1394,7 @@ header .userIcon img {
 }
 .video-slider .layer h5 {
   padding-top: 20px;
-  margin: 60px 0 0px;
+  margin: 10px 0 0px;
 }
 @media (max-width: 1200px) {
   .video-slider .layer h5 {
@@ -1945,6 +1947,13 @@ section.mainWrapper
   border: 2px solid #be41c0 !important;
   background: rgba(198, 208, 225, 0.1);
 }
+.home-category li a {
+  cursor: pointer;
+}
+.rightSection .keeps-container .interest-guru .wrapper figure {
+  background: linear-gradient(87.97deg,      #b03fcc 2.88%,      #683fe4 25.56%,      rgba(216, 63, 190, 0.94) 114.56%),    linear-gradient(0deg, rgba(255, 255, 255, 0.21), rgba(255, 255, 255, 0.21));
+  border-radius: 50%;
+}
 .rightSection .keeps-container .blog-details h3 {
   color: #cfd6db !important;
 }
@@ -2341,7 +2350,6 @@ form.help-section.payment-wrapper > h2 {
   margin-bottom: 25px;
 }
 
-<<<<<<<<< Temporary merge branch 1
 .switch {
   position: relative;
   display: inline-block;
@@ -2461,8 +2469,32 @@ input:checked + .slider:before {
 .rightSection .keeps-container .gurukeeps-wrapper p {
  width: calc(100% - 50px);
 }
+}
+@media (max-width: 767px){
+  .interestSection li {
+    width: 100%;
+}
 
+.video-slider .layer h5 {
+    margin: 60px 0 0px;
+}
 
+.rightSection .profile-img-box {
+    height: 100vh;
+} 
 
+.interestSection button.loginBtn {
+    top: 120px;
+}
+
+.interestSection .buttonText p {
+    font-size: 17px;
+    text-align: center;
+}
+
+.blog-wrap h1 {
+    font-size: 24px;
+    margin-bottom: 0;
+} 
 
 }
