--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -2839,6 +2839,7 @@ section.interestSection.second.mainBg figure.headerLogo {
     rgba(22, 22, 22, 0.9) 70.91%
   );
   border-radius: 12px;
+  cursor: pointer;
   padding: 14px 12px 7px;
 }
 
@@ -6027,7 +6028,7 @@ h3 {
   line-height: 1.25em;
   font-family: PlusJakartaSansSemiBold;
   margin: 5px 0 12px;
-  cursor: default;
+  cursor: pointer;
   border: 2px solid transparent;
 }
 
@@ -6050,6 +6051,7 @@ h3 {
 
 .rightSection .keeps-container .interest-guru li img {
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .rightSection .contact-wrapper .faq-container {
@@ -7878,6 +7880,7 @@ h3 {
 
 .rightSection .keeps-container .gurukeeps-wrapper .connect-box li {
   margin-right: 12px;
+  cursor: pointer;
 }
 
 .rightSection
