--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -2212,7 +2212,7 @@ ul.connect-link li {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(1px);
-  background-color: rgba(19, 31, 44, 0.47);
+  /* background-color: rgba(19, 31, 44, 0.47); */
 }
 .rightSection .guru-gold-silver .silver-user li {
   position: relative;
@@ -2490,9 +2490,10 @@ input:checked + .slider:before {
 }
 
 .rightSection .profile-img-box {
-    height: 100%;
-    min-height: 115vh
-} 
+  height: 100%;
+  min-height: 120vh;
+  padding-bottom: 20px;
+}
 
 .interestSection button.loginBtn {
   top: 35px;
@@ -2542,11 +2543,11 @@ input:checked + .slider:before {
   margin-left: 20px;
 }
 .pop-btn.wrapper button.loginBtn {
-  bottom: 100px !important;
+  bottom: 34px !important;
 }
 .pop-btn.wrapper .errorMessage {
   position: absolute;
-  bottom: 70px !important;
+  bottom: 95px !important;
 }
 .help-section span {
   margin-left: 20px;
@@ -2593,4 +2594,6 @@ input:checked + .slider:before {
   background: linear-gradient(87.97deg, #b03fcc 2.88%, #683fe4 25.56%, rgba(216, 63, 190, 0.94) 114.56%), linear-gradient(0deg, rgba(255, 255, 255, 0.21), rgba(255, 255, 255, 0.21)) !important; 
   color:white !important;
 }
-
+.ql-toolbar.ql-snow {
+  background: white !important;
+}
